# troonbot

./: .env.example  Cargo.toml  LICENSE  README.md
src/: .env.example  config.rs  discord.rs  fetch.rs  main.rs  models.rs  twilio.rs
