[package]
name = "troonBot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = { version = "0.15.0"  }
