[package]
name = "troonbot"
version = "0.1.0"
authors = ["Chris Runo <chris.runo+troonbot@gmail.com>"]
edition = "2024"

[dependencies]
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
